fix: Fix responsivity on navbar with flex-wrap

--- a/style.css
+++ b/style.css
@@ -33,12 +33,21 @@ h1, h2, h3 {
     height: 60px;
     justify-content: space-between;
     align-items: center;
-}
-
-.container {
     padding: 0 30px;
     max-width: 1100px;
     margin: 0 auto;
+    border: 2px solid red;
+}
+
+@media (max-width:550px){
+    .navbar .container {
+        flex-wrap: wrap;
+        justify-content: center;
+        flex: 1 1 auto;
+        width: fit-content;
+        height: fit-content;
+    }
+    
 }
 
 .logo {
